# swagger-editor.yaml
@@ -144,7 +144,7 @@ paths:
           $ref: "#/components/responses/BadRequest"
         200:
           $ref: "#/components/responses/OK"
-  /resourceOwner/{id}/pwd:
+  /resourceOwner/pwd:
     patch:
       tags:
       - resourceOwner
@@ -277,6 +277,10 @@ components:
           format: int64
         hasSecret:
           type: boolean
+        resourceIds:
+          type: array
+          items:
+            type: string
     GrantedAuthorityImpl:
       type: object
       properties:
@@ -386,11 +390,11 @@ components:
       type: oauth2
       flows:
         clientCredentials:
-          tokenUrl: /oauth/token
+          tokenUrl: http:/localhost:8080/oauth/token
           scopes:
             write: Grant write access
         password:
-          tokenUrl: /oauth/token
+          tokenUrl: http://localhost:8080/oauth/token
           scopes:
             root: Grant access to root operation including client CRUD
             admin: Grant access to admin operation
